# ZacharyBiggsResumeRepo

./: readme.txt
A03_Snake/A03_Snake/: A03_Snake.sln
A03_Snake/A03_Snake/A03_Snake/: GameBoard.cs  Obstacle.cs  Program.cs  Snake.cs
C#/: readme.txt
C#/A03_Snake/A03_Snake/: A03_Snake.sln
C#/A03_Snake/A03_Snake/A03_Snake/: GameBoard.cs  Obstacle.cs  Program.cs  Snake.cs
C#/LabLinq2/LabLinq2/: Program.cs  Student.cs
C#/NasaApiProject/: NasaApiProject.sln
C#/NasaApiProject/NasaApiProject/: Form1.Designer.cs  Form1.cs  NasaApiProject.csproj  Program.cs  packages.config
C#/NasaApiProject/NasaApiProject/Properties/: Resources.Designer.cs  Settings.Designer.cs
C#/War/War/: War.sln
C#/War/War/War/: Card.cs  Deck.cs  Form1.Designer.cs  Form1.cs  Form1.resx  GamePanel.Designer.cs  GamePanel.cs  Hand.cs  MainPanel.Designer.cs  MainPanel.cs  MainPanel.resx  Player.cs  Program.cs  SaveManager.cs  War.csproj
C_C++/DatabaseAssignment/DatabaseAssignment/: CMakeLists.txt  main.c
C_C++/DatabaseAssignment/DatabaseAssignment/SQLite/: CMakeLists.txt
C_C++/DatabaseAssignment/DatabaseAssignment/SQLite/Data/: grading_system.db
Java/Autocomplete/Autocomplete/: Autocomplete.java  BinarySearchDeluxe.java  Term.java  Tester.java  readme.txt
Java/TraxRouteFinder/: .classpath  .project  TraxRouteFinder.eml  TraxRouteFinder.userlibraries  readme.txt
Java/TraxRouteFinder/src/traxRouteFinder/: Line.java  RouteFinder.java  Station.java  UTARailRoute.java
Java/othello/OthelloGame-master/: .classpath  readme.txt
LabLinq2/LabLinq2/: Program.cs  Student.cs
(+8 files in other folders)
